<resources>
    <string name="app_name">GitHub App</string>
    <string name="find_github_users">Find GitHub Users</string>
    <string name="name_users">Name</string>
    <string name="username">username</string>
    <string name="txt_repository">Repository</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="location_users">Location</string>
    <string name="company">Company</string>
    <string name="tab_text_followers">Followers</string>
    <string name="tab_text_following">Following</string>
    <string name="change_settings">Change Settings</string>
    <string name="change_language_setting">Change Language</string>
    <string name="label_detail">Detail User</string>
    <string name="favourite">Favourite</string>
    <string name="favorite_user">Favorite User</string>
    <string name="key_language">Language</string>
    <string name="key_reminder">Reminder</string>
    <string name="label_settings">Settings</string>
    <string name="setup_reminder">Reminder has been activated</string>
    <string name="cancel_reminder">Reminder has been disabled</string>
    <string name="reminder_time">Daily Reminder at 09.00 AM</string>
    <string name="reminder_message">Hi, Let\'s check out your friends on GitHub</string>
    <string name="appwidget_text">Favorite GitHub\'s User</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="widget_image_view">Widget Image View</string>
    <string name="splash_screen_image">Splash Screen Image</string>
    <string name="user_not_found">User Not Found</string>
    <string name="search_image">Search Image</string>
    <string name="add_user"> Added to Favorite</string>
    <string name="delete_user"> Deleted from Favorite</string>
    <string name="click_follower">Follower Selected</string>
    <string name="click_following">Following Selected</string>
</resources>